Footer fixxed on mobile. Clipboard handled.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -51,9 +51,9 @@ h2 {
   box-sizing: border-box;
 
   @media (max-width: $breakpoint-m) {
-    padding: 160px 40px 0 40px;
+    padding: 160px 40px 80px 40px;
   }
   @media (max-width: $breakpoint-s) {
-    padding: 160px 16px 0 16px;
+    padding: 160px 16px 80px 16px;
   }
 }
